kube-watch/kube-watch-networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: j-kube-watch-network-policy
  namespace: creative-operator
spec:
  podSelector:
    matchLabels:
      app: j-kube-watch
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 587
        - protocol: TCP
          port: 465
        - protocol: TCP
          port: 25
